[gd_scene load_steps=9 format=2]

[ext_resource path="res://LoonyLips.gd" type="Script" id=1]
[ext_resource path="res://gfx/blackboard.jpg" type="Texture" id=2]
[ext_resource path="res://gfx/Feltpen.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://gfx/blue_button11.png" type="Texture" id=4]
[ext_resource path="res://gfx/blue_button12.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 40
font_data = ExtResource( 3 )

[node name="LoonyLips" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.037
anchor_top = 0.062
anchor_right = 0.962
anchor_bottom = 0.872
margin_left = 0.32
margin_top = 0.479996
margin_right = 0.319946
margin_bottom = -17.1201

[node name="DisplayText" type="Label" parent="VBoxContainer"]
margin_right = 591.0
margin_bottom = 700.0
rect_min_size = Vector2( 300, 700 )
custom_fonts/font = SubResource( 1 )
text = "Placeholder Text"
autowrap = true

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 704.0
margin_right = 591.0
margin_bottom = 777.0
custom_constants/separation = 12
alignment = 1

[node name="PlayerText" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
margin_right = 425.0
margin_bottom = 73.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 2 )

[node name="PlayerButton" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
margin_left = 437.0
margin_right = 510.0
margin_bottom = 73.0
rect_min_size = Vector2( 73, 73 )
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
expand = true

[node name="PlayerButtonLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_left = 522.0
margin_top = 5.0
margin_right = 591.0
margin_bottom = 68.0
custom_fonts/font = SubResource( 3 )
text = "OK"
[connection signal="text_entered" from="VBoxContainer/HBoxContainer/PlayerText" to="." method="_on_PlayerText_text_entered"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/PlayerButton" to="." method="_on_PlayerButton_pressed"]
